--- a/client/templates/proposition.ng.html
+++ b/client/templates/proposition.ng.html
@@ -4,13 +4,13 @@
     </ion-nav-buttons>
     <ion-content class="has-header">
         <div class="list">
-            <div class="item">
+            <div class="item item-text-wrap">
                 Name: <h1>{{proposition.name}}</h1>
             </div>
-            <div class="item">
+            <div class="item item-text-wrap">
                 Description: <h2>{{proposition.description}}</h2>
             </div>
-            <div class="item">
+            <div class="item item-text-wrap">
                 Keywords: <h3>{{proposition.keywords}}</h3>
             </div>
             <div class="item item-divider">
