--- a/client/templates/proposition.ng.html
+++ b/client/templates/proposition.ng.html
@@ -27,7 +27,7 @@
                     </div>
                     <div class="col">
                         <div class="row">
-                            Name: {{option.name}}"
+                            Name: {{option.name}}
                         </div>
                         <div class="row" ng-if="option.description">
                             Description: {{option.description}}
