--- a/client/templates/proposition.ng.html
+++ b/client/templates/proposition.ng.html
@@ -5,23 +5,23 @@
     <ion-content class="has-header">
         <div class="list">
             <div class="item item-text-wrap">
-                Name: <h1>{{proposition.name}}</h1>
+                Name: <h1>{{vm.proposition.name}}</h1>
             </div>
             <div class="item item-text-wrap">
-                Description: <h2>{{proposition.description}}</h2>
+                Description: <h2>{{vm.proposition.description}}</h2>
             </div>
             <div class="item item-text-wrap">
-                Keywords: <h3>{{proposition.keywords}}</h3>
+                Keywords: <h3>{{vm.proposition.keywords}}</h3>
             </div>
             <div class="item item-divider">
                 Options
             </div>
-            <div class="item item-input item-stacked-label" ng-repeat="option in proposition.options">
+            <div class="item item-input item-stacked-label" ng-repeat="option in vm.proposition.options">
                 <div class="row">
                     <div class="col">
                         <div class="item range range-positive">
                             <i class="icon ion-ios-sunny-outline"></i>
-                            <input type="range" name="{{option.name}}" min="0" max="100" value="50">
+                            <input type="range" name="{{option.name}}" min="0" max="100" ng-model="option.value">
                             <i class="icon ion-ios-sunny"></i>
                         </div>
                     </div>
@@ -35,6 +35,9 @@
                     </div>
                 </div>
             </div>
+        </div>
+        <div class="padding">
+            <button class="button button-positive" ng-click="vm.vote()">Vote</button>
         </div>
     </ion-content>
 </ion-view>
