--- a/client/templates/propositions.ng.html
+++ b/client/templates/propositions.ng.html
@@ -24,6 +24,6 @@
                 {{proposition.name}}<span ng-if="proposition.description"> - {{proposition.description}}</span>
             </ion-item>
         </ion-list>
-        <dir-pagination-controls on-page-change="pageChanged(newPageNumber)"></dir-pagination-controls>
+        <dir-pagination-controls on-page-change="vm.pageChanged(newPageNumber)"></dir-pagination-controls>
     </ion-content>
 </ion-view>
