Fix load order and data dependencies Remove autopublish and insecure Show results by default Meteor update

--- a/client/templates/menu.ng.html
+++ b/client/templates/menu.ng.html
@@ -32,7 +32,7 @@
                 </ion-item>
             </ion-list>
             <div id="side-menu-login" class="item">
-                <meteor-include src="loginButtons"></meteor-include>
+                <blaze-template name="loginButtons"></blaze-template>
             </div>
         </ion-content>
     </ion-side-menu>
